--- a/index.html
+++ b/index.html
@@ -125,23 +125,26 @@
     <div class="staff-container">
       <div class="staff-card">
         <img src="https://i.ibb.co/0Qj2YpG/avatar1.png" alt="Staff 1">
-        <h3>Alex Johnson</h3>
+        <h3>Zac</h3>
         <p>Founder & CEO</p>
       </div>
       <div class="staff-card">
-        <img src="https://i.ibb.co/wpdP6S8/avatar2.png" alt="Staff 2">
-        <h3>Samantha Lee</h3>
+        <img src= alt="staff 2">
+      <div class="staff-card">
+        <img src="https://tr.rbxcdn.com/30DAY-AvatarHeadshot-7E690A7609784DA74B4D30CEBC8038EE-Png/150/150/AvatarHeadshot/Webp/noFilter" alt="Staff 3">
+        <h3>Lacey</h3>
         <p>Community Manager</p>
+        
       </div>
       <div class="staff-card">
-        <img src="https://i.ibb.co/c10nC6C/avatar3.png" alt="Staff 3">
-        <h3>Michael Chen</h3>
-        <p>Lead Developer</p>
+        <img src="https://tr.rbxcdn.com/30DAY-AvatarHeadshot-CABFD9A974237DD413BF9F4902CC25CA-Png/150/150/AvatarHeadshot/Webp/noFilter" alt="Staff 4">
+        <h3>Kojo</h3>
+        <p>Head Developer</p>
       </div>
       <div class="staff-card">
-        <img src="https://i.ibb.co/3fR7RhX/avatar4.png" alt="Staff 4">
-        <h3>Emily Davis</h3>
-        <p>Event Coordinator</p>
+        <img src="https://i.ibb.co/3fR7RhX/avatar4.png" alt="Staff 5">
+        <h3>Archie</h3>
+        <p>Developer</p>
       </div>
     </div>
     <a class="btn" onclick="showPage('home')">Back Home</a>
