--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     section.active { display: block; }
 
     /* Hero (Home only) */
-    .hero { height: 85vh; background: url("https://i.ibb.co/smL1Zzv/shopping-banner.jpg") no-repeat center center/cover; position: relative; display: flex; align-items: center; justify-content: center; }
+    .hero { height: 85vh; background: url("file:///C:/Users/iimas/Desktop/f28a40622507328fb3cc9db88479e3d5.png") no-repeat center center/cover; position: relative; display: flex; align-items: center; justify-content: center; }
     .hero::after { content: ""; position: absolute; top:0; left:0; width:100%; height:100%; background: rgba(0,0,0,0.6); }
     .hero-content { position: relative; text-align: center; color: #fff; max-width: 700px; padding: 20px; z-index: 1; }
     .hero-content h2 { font-size: 3rem; margin-bottom: 15px; }
