--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       Bramwell Shopping is just getting started — and we’d love for you to be part of the journey.
     </p>
     <a href="https://discord.gg/pKmKepy54g" class="btn">Join Discord</a>
-    <a href="https://www.roblox.com/communities/277229935/Bramwell-Shopping-UK#!/about" class="btn">Join Roblox<
+    <a href="https://www.roblox.com/communities/277229935/Bramwell-Shopping-UK#!/about" class="btn">Join Roblox</a>
     <a class="btn" onclick="showPage('home')">Back Home</a>
   </section>
 
@@ -151,7 +151,7 @@
       💡 Our average response time is 24–48 hours.
     </p>
     <a href="https://discord.gg/pKmKepy54g" class="btn">Join Discord</a>
-    <a href="https://www.roblox.com/communities/277229935/Bramwell-Shopping-UK#!/about" class="btn">Join Roblox<
+    <a href="https://www.roblox.com/communities/277229935/Bramwell-Shopping-UK#!/about" class="btn">Join Roblox</a>
     <a class="btn" onclick="showPage('home')">Back Home</a>
   </section>
 
