--- a/index.html
+++ b/index.html
@@ -209,7 +209,26 @@
       </div>
 
       <div class="staff-card">
-        <img src="https://tr.rbxcdn.com/30DAY-AvatarHeadshot-BEDD22E90C043171F2344E3BB629667A-Png/150/150/AvatarHeadshot/Webp/noFilter" alt="Staff 9">
+        <img src="https://tr.rbxcdn.com/30DAY-AvatarHeadshot-B4746565C16969861D93290EB80DCD79-Png/150/150/AvatarHeadshot/Webp/noFilter" alt="Staff 9">
+        <h3>Tarlo</h3>
+        <p>Developer</p>
+      </div>
+
+      <div class="staff-card">
+        <img src="https://tr.rbxcdn.com/30DAY-AvatarHeadshot-30C65114F880A9699152097B98915F2E-Png/150/150/AvatarHeadshot/Webp/noFilter" alt="Staff 10">
+        <h3>BaconDev</h3>
+        <p>Developer</p>
+      </div>
+
+
+      <div class="staff-card">
+        <img src="https://tr.rbxcdn.com/30DAY-AvatarHeadshot-FF6BCAC09CE7B8AC2E871F09A735318D-Png/150/150/AvatarHeadshot/Webp/noFilter" alt="Staff 11">
+        <h3>Danny</h3>
+        <p>Developer</p>
+      </div>
+      
+      <div class="staff-card">
+        <img src="https://tr.rbxcdn.com/30DAY-AvatarHeadshot-BEDD22E90C043171F2344E3BB629667A-Png/150/150/AvatarHeadshot/Webp/noFilter" alt="Staff 12">
         <h3>Archie</h3>
         <p>Staffing Manager</p>
       </div>
